authul_macros/tests/errors/table/on_wrong_kind_of_object.stderr
error: authul_table only applies to structs
 --> tests/errors/table/on_wrong_kind_of_object.rs:5:1
  |
5 | enum Foo {}
  | ^^^^

error: authul_table only applies to structs
 --> tests/errors/table/on_wrong_kind_of_object.rs:8:1
  |
8 | fn foo() {}
  | ^^

error: authul_table only works on structs with named fields
  --> tests/errors/table/on_wrong_kind_of_object.rs:11:11
   |
11 | struct Bar;
   |           ^

error: authul_table only works on structs with named fields
  --> tests/errors/table/on_wrong_kind_of_object.rs:14:11
   |
14 | struct Baz(String);
   |           ^^^^^^^^
